# ResManager

./: .gitignore  App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  README.md  ResManager.csproj  ResWebBackendManager.csproj  ResWebBackendManager.sln  RestoManager.csproj  RestoManager.sln  Styles.xaml
Converters/: CheckoutButtonColorConverter.cs  IsWebOrderConverter.cs  LanguageNameConverter.cs  StatusToColorConverter.cs  TableEqualityConverter.cs  TableIconConverter.cs  TableToOrderItemsConverter.cs  TableTotalPriceConverter.cs  TotalConverter.cs
Models/: Dish.cs  Order.cs  OrderItem.cs  Payment.cs  Reservation.cs  Table.cs
Resources/: LocalizedStrings.cs
Services/: DataPersistenceService.cs  FirestoreListenerService.cs  LocalizationService.cs  RestaurantService.cs
ViewModels/: AllOrdersViewModel.cs  CheckoutViewModel.cs  CreateTakeAwayViewModel.cs  MainViewModel.cs  TableDetailsViewModel.cs
Views/: AllOrdersWindow.xaml  AllOrdersWindow.xaml.cs  CheckoutWindow.xaml  CheckoutWindow.xaml.cs  CreateDishDialog.xaml  CreateDishDialog.xaml.cs  CreateTableDialog.xaml  CreateTableDialog.xaml.cs  CreateTakeAwayWindow.xaml  CreateTakeAwayWindow.xaml.cs  MenuWindow.xaml  MenuWindow.xaml.cs  OrderDetailsWindow.xaml  OrderDetailsWindow.xaml.cs  TableDetailsWindow.xaml  TableDetailsWindow.xaml.cs
